add url for allowed origin